abi/tests/ui/empty.stderr
error: unexpected end of input, expected at least one of: `type`, `struct`, `function`, `error`, Solidity type
 --> tests/ui/empty.rs:3:1
  |
3 | sol! {}
  | ^^^^^^^
  |
  = note: this error originates in the macro `sol` (in Nightly builds, run with -Z macro-backtrace for more info)

error: defining empty structs is disallowed.
 --> tests/ui/empty.rs:6:12
  |
6 |     struct EmptyStruct {}
  |            ^^^^^^^^^^^
